--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -70,58 +70,81 @@
                        
                       
            </style>
+         
 </header>
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++ container ++++++++++++++++++++++++++++++++++-->
-     <div class="container mt-auto">   
-      <div class="row"
-      <div class="col"
-<div>
-  <div>
-            <br/><br/>
-<p>Check4digiPay was established in 2019. Combining industry expertise, we have progressed to be a leading provider of technology driven (enabled), efficient data processing services for members,
+     <H1 class ="text text-white mt-5 text-center" >About Us</H1>
+
+     <div class="container mt-auto ">   
+      <div class="row m-5"> 
+      <div class="col">          
+        <div class="card-columns bg-info mt-5 text-white p-3 "> 
+          <div class="card  bg-success p-3"> 
+          <img class="card-image-top img-fluid" src="../img/F22.png"  alt="">
+       <div class="card-body-1"> 
+        <h4 class="card-title">Energetic:</h4> 
+            <p class="card-text">Check4digiPay was established in 2019. Combining industry expertise, we have progressed to be a leading provider of technology driven (enabled), efficient data processing services for members,
    value added agents, financial institutions and independent sales organizations in 4 continents namely (North America, South America, Europe and Asia) that allow them to cater their products and 
    services to the US.</P>
-<p>Our lean but robust organization boasts of a proprietary, secure, state of the art data processing portal organically developed by our dynamic IT team, a full blown Risk Department, complete with seasoned Fraud and Prevention Specialists and a dedicated in house Customer Service Department focused on delivering total customer and member expectation fulfillment.</p>
 
 
+            </div>
+            </div>
+
+             
+          <div class="card  bg-primary p-3"> 
+          <img class="card-image-top img-fluid" src="../img/securityBigdata.png"  alt="">
+       <div class="card-body-2"> 
+        <h4 class="card-title">Lean:</h4> 
+            <p class="card-text"><p>Our lean but robust organization boasts of a proprietary, secure, state of the art data processing portal organically developed by our dynamic IT team, a full blown Risk Department, complete with seasoned Fraud and Prevention Specialists and a dedicated 
+    in house Customer Service Department focused on delivering total customer and member expectation fulfillment.</p>
 
     </div>
-</div>              
-
-               
-        <div>
-            <img src="../img/securityBigdata.png"  alt="">
-            
-                <h4>Our lean but robust organization boasts of the following:</h4>
-        <div>
-                                
-                            
-
-                            <div class="col-sm-12" style="padding-top:1em; padding-bottom:1em;">
-                                <ul style="list-style-type:circle;padding-left:2em;">
+    </div>
+    <div class="card  bg-dark p-3"> 
+          <img class="card-image-top img-fluid" src="../img/F22-2.png"  alt="">
+       <div class="card-body-3"> 
+        <h4 class="card-title">Robust:</h4> 
+            <p class="card-text"><h4>Our lean but robust organization boasts of the following:</h4></P>
+           <ul style="list-style-type:circle;padding-left:2em;">
                                     <li><b>A proprietary Secure Data Processing Gateway.</b></li>
                                     <li><b>A competent Risk Department manned by seasoned Fraud and Prevention Specialists.</b></li>
                                     <li><b>A dedicated in house Customer Service Department focused on total customer satisfaction.</b></li>
-                                </ul>
-                            </di>
-            <div>
-            <div>
-            Through a firm commitment to our vision of being a one stop business solutions company, we have blossomed into one of the most trusted and reliable institutions in our industry.
-            Top-notch security We employ top-tier technology to keep your info safe at all tim consectetur adipisicing elit. Delectus, voluptate.
-        <br>
-        <br>
+            </ul>
 
-                <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a>
+            
+    </div>
+    </div>
+
+    
+    
+  
+</div> 
+</div>             
+        
+        
+                                
+                            
+
+                        <!-- <div class="col-sm-12" style="padding-top:1em; padding-bottom:1em;"> -->
+                                
+                            
+            <div>
+            <div>
+            <p class="text-justify"> Through a firm commitment to our vision of being a one stop business solutions company, we have blossomed into one of the most trusted and reliable institutions in our industry.
+            Top-notch security We employ top-tier technology to keep your info safe at all tim consectetur adipisicing elit. Delectus, voluptate.</p>
+        <br>
+        <br>               
+           <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a>
             </div>
         </div>
-
         <br>
         <br>
      <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ form ++++++++++++++++++++++++++++++++++++++-->                    
-      <form>
+      <form_container>
          <div class="row">
 
-            <div class="col-md-8 col-md-offset-3" id="form_container">
+            <div class="col-md-auto col-md-offset-3" id="form_container" style="padding-top:1em; padding-bottom:1em;>
              E-mail us ! We will get back to you at the earliest!
 
         <form role="form" method="post" id="reused_form"> <hr/>
