--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -174,7 +174,7 @@ guaranteed to increase Sales and Revenues </p></h2>
     
 <!--##############################  Datda card ############################-->
  <div class="card">
-    <img class="card-img-top" src="../img/vpn-neto.png" alt="Card image cap">
+    <img class="card-img-top" src="../img/vpn-nets.png" alt="Card image cap">
     <div class="card-body">
       <h4><p class= "text-primary text-center">Benefits Overview </p></h4>
       <h5 class="card-title"><P class="text-center"><b>Data Processing System</b></h5></P>
