--- a/templates/views/partners.hbs
+++ b/templates/views/partners.hbs
@@ -61,10 +61,10 @@
          </style> 
 </header>
 <!--++++++++++++++++++++++++++++++++++Navabar end+++++++++++++++++++++++++++++-->
-<style> body {padding-top: 70px;} </style> 
+<!--<style> body {padding-top: 70px;} </style> -->
 <!--+++++++++++++++++++++++  header  ++++++++++++++++++++++++++++++++++++++++++++-->
 
-<div class="container-fluid ">  
+<div class="container-fluid pt-5">  <!--full screen-->
  
     
     
