--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -105,11 +105,11 @@
           <img class="card-image-top img-fluid" src="../img/F22-2.png"  alt="">
        <div class="card-body-3"> 
         <h4 class="card-title">Robust:</h4> 
-            <p class="card-text"><h4>Our lean but robust organization boasts of the following:</h4></P>
+            <p class="card-text"><h5>Our lean but robust organization boasts of the following:</h5></P>
            <ul style="list-style-type:circle;padding-left:2em;">
-                                    <li><b>A proprietary Secure Data Processing Gateway.</b></li>
-                                    <li><b>A competent Risk Department manned by seasoned Fraud and Prevention Specialists.</b></li>
-                                    <li><b>A dedicated in house Customer Service Department focused on total customer satisfaction.</b></li>
+                                    <li>A proprietary Secure Data Processing Gateway.</li>
+                                    <li>A competent Risk Department manned by seasoned Fraud and Prevention Specialists.</li>
+                                    <li>A dedicated in house Customer Service Department focused on total customer satisfaction.</li>
             </ul>
 
             
