--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
     
-    <link rel="stylesheet" href="/css/styles.css">  
+    <link rel="stylesheet" href="/css/styles.css"> 
     <script src="../public/js/form.js"></script>
-    <link rel="stylesheet" href="/css/form.css" > 
+    <link rel="stylesheet" href="/css/form.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
@@ -55,7 +55,7 @@
     
 
 
-<!--+++++++++++++++++++++++++++++++++++++++++++++++++++ Drop Down menu bar++++++++++++++++++-->
+<!--+++++++++++++++++++++++++++++++++++++++++++++++++++ menu bar++++++++++++++++++-->
 
     
            
@@ -75,9 +75,9 @@
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++ container ++++++++++++++++++++++++++++++++++-->
      <H1 class ="text text-white mt-5 text-center" >About Us</H1>
 
-     <div class="container mt-auto ">   
+     <div class="container-fluid mt-auto ">   
       <div class="row m-5"> 
-      <div class="col">          
+      <div class="col-xs-6">          
         <div class="card-columns bg-info mt-5 text-white p-3 "> 
           <div class="card  bg-success p-3"> 
           <img class="card-image-top img-fluid" src="../img/F22.png"  alt="">
