--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -140,7 +140,7 @@
 <!---================================================= Section2  ===================================-->
 <section class="place 3 cards creative_feature_area" style="margin-top:10em">
 
-    <div class="benefits-container-fluid", style="margin-top:auto." > 
+    <div class="benefits-container-fluid", style="margin-top:auto"> 
     
               <div class="row">
         <!-- <div class="col-sm-8">-->
@@ -148,7 +148,7 @@
                   <h2><p class="text-warning text-center" ml-10em>Secure Data Processing Solutions
 guaranteed to increase Sales and Revenues </p></h2>
     <!--####################### Card Deck ##############################-->       
-            <div class="card-deck"> 
+            <div class="card-deck m-3"> 
               <!--=======================Business card===============-->
               <div class="card" > 
              <img class ="card-img-top" src="../img/energy.png" alt ="Card image Cap">
