size color of the phne #

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -80,7 +80,7 @@
 
  
   <div style="background: transparent !important" class="jumbotron text-center"> 
-   <H4> <p>1-800-888-8888 </p></H4>
+   <H3> <p class ="text-white">1-800-888-8888 </p></H3
         
 
   <P> <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a></p> 
