--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -109,10 +109,35 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
             </ul>
                 </p>
 
+ <!-- ================================NESTING MEDIA OBJECTS info media==========================-->
+        <div class="media">
+            <a class = "mr-3" href="#"></a>
+            <img src="../img/entrepreneur.png" class="img-thumbnail"  width="300" height="200">
+            <div class="media-body">
+                <h5>Merchants Marketing</h5>
+                With the trend towards more direct, customer-centric marketing – and to ensure a positive customer experience 
+                that adds to the bottom line – more than ever marketers need sound customer communications management (CCM) 
+                strategies and solutions in place.
 
+                <div class="media mt-4">
+                    <a class="pr-3" href="#">
+                        <img src="../img/document-chart.png" class="img-thumbnail" width="300" height="200">
+                    </a>
+                    <div class ="media-body">
+                        <h5>Customer communications</h5>
+                        Turning regular customer communications, such as bills and statements, into powerful marketing vehicles that 
+                        deliver results isn’t easy. But it’s something TriPartum does every day for marketers at client organisations.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <br>
+        <br>
              <img alt="" src="../img/chartbar.png" class="card-img-bottom"> .</p>
   
 </div>
+<!--=========================================info media==========================-->
 
 
 
