--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -110,16 +110,16 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
                 </p>
 
  <!-- ================================NESTING MEDIA OBJECTS info media==========================-->
-        <div class="media">
+        <div class="media mt-3 mb-n1">
             <a class = "mr-3" href="#"></a>
-            <img src="../img/entrepreneur.png" class="img-thumbnail"  width="300" height="200">
+            <img src="../img/entrepreneur.png" class="img-thumbnail"  width="250" height="180">
             <div class="media-body">
                 <h5>Merchants Marketing</h5>
                 With the trend towards more direct, customer-centric marketing – and to ensure a positive customer experience 
                 that adds to the bottom line – more than ever marketers need sound customer communications management (CCM) 
                 strategies and solutions in place.
 
-                <div class="media mt-4">
+                <div class="media mt-5">
                     <a class="pr-3" href="#">
                         <img src="../img/document-chart.png" class="img-thumbnail" width="300" height="200">
                     </a>
