img class= mr-3

--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -110,9 +110,9 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
                 </p>
 
  <!-- ================================NESTING MEDIA OBJECTS info media==========================-->
-        <div class="media mt-3 mb-n1">
-            <a class = "mr-3" href="#"></a>
-            <img src="../img/entrepreneur.png" class="img-thumbnail"  width="250" height="180">
+        <div class="media mt-3">
+            <a class =  href="#"></a>
+            <img src="../img/entrepreneur.png" class="img-thumbnail mr-3"  width="250" height="180">
             <div class="media-body">
                 <h5>Merchants Marketing</h5>
                 With the trend towards more direct, customer-centric marketing – and to ensure a positive customer experience 
@@ -121,7 +121,7 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
 
                 <div class="media mt-5">
                     <a class="pr-3" href="#">
-                        <img src="../img/document-chart.png" class="img-thumbnail" width="300" height="200">
+                        <img src="../img/document-chart.png" class="img-thumbnail" width="250" height="180">
                     </a>
                     <div class ="media-body">
                         <h5>Customer communications</h5>
