use media add imsge

--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -137,7 +137,7 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
              <img alt="" src="../img/chartbar.png" class="card-img-bottom"> .</p>
   
 </div>
-<!--=========================================info media==========================-->
+<!--=========================================info media end==========================-->
 
 
 
