--- a/templates/views/securitycenter.hbs
+++ b/templates/views/securitycenter.hbs
@@ -4,14 +4,14 @@
     crossorigin="anonymous">
     <title>HTML FlexBox -  Two percentage columns and one larger, left content</title>
       
-            
+     <link rel="stylesheet" href="/css/security.css" >       
     <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">    
     <meta name="generator" content="HAPedit 3.1">
 
   <head/>  
     
     
-    <style type="text/css">
+    <!--<style type="text/css">
     
                                                     
                                                                       
@@ -100,7 +100,8 @@
             clear: both;
             width: 100%;
         }
-    </style>
+    </style>-->
+
 </head>
  
 <body>
@@ -111,16 +112,14 @@
     <div id="header">
        <h1>Cyber Security You Should Know</h1>
         <a href="/" target="_blank">Go Back</a>
-       
-        
+           
     </div>
-    <div id="wrapper">
-        <img src="../img/security21.png" style="margin-left:30px;  width:750px;display:block" />
+
+    <div class="mt-3" id="wrapper">
+        <img class="ml-3 mt-3" src="../img/security21.png" style="  width:750px;display:block" />
         <div id="content">
          <style>
-img {
-  float: right;
-}
+
 </style>  
             <H3><strong>1. Online Security </strong></H3> <hr/>
             <h3>Online Transaction Security </h3>
@@ -133,7 +132,7 @@ img {
             <p>
             </p> <hr/>
             <h3>Your Private Information</h3> 
-            <p>
+            <p class="ml-3">
                 Information you provide via electronic forms on the Check4DigiPay website is secure and encrypted in most instances. In other words, 
                 it is scrambled en route and decoded once it reaches Check4DigiPay. You may check that your web session is secure by looking for a 
                 small lock symbol usually located in the lower corner of your web browser window. Current versions of leading web browsers indicate
@@ -142,12 +141,12 @@ img {
                 "https://" at the beginning of your website URL in your web browser. The "s" means that the web connection is secure.
             </p> <hr/>
                   <h3>Minimum System Requirment for Using our Check4digiPay Data Processing </h3>  <hr/>
-                  <P>If your browser does not meet the requirements necessary to support Check2Pay, we'll tell you how you can update your browser 
+                  <P class="ml-3">If your browser does not meet the requirements necessary to support Check2Pay, we'll tell you how you can update your browser 
                       when you log on to Check4DigiPay Online.</P>  
 
-                      <img src="../img/computer-pen.png" style="margin-right:50px;  width:450px;display:block" > 
+                      <img class = "ml-3" src="../img/computer-pen.png" style="margin-right:50px;  width:450px;display:block" > 
           <div>
-              <p>
+              <p class="ml-3">
                     Windows Operating System
               </p>
           <ul>
@@ -155,13 +154,13 @@ img {
             <li>Internet Explorer 7 and higher</li>
             <li>Firefox 3.0 and higher, Chrome 12 and higher</li>
          </ul>
-                 <p>
+                 <p class="ml-3">
                     Macintosh Operating System
                  </p>
           <ul>
             <li>Mac OS-X Tiger, Leopard and Snow Leopard</li>
           </ul> <hr/>
-               <p> 
+               <p class="ml-3"> 
                    Viewing Check4DigiPay Online
                </p> 
               
@@ -175,10 +174,15 @@ img {
 
         </div>
     </div>
-    <div id="navigation">
-        <img src="../img/ePayBankDigi.png" style="margin-right:60px; width:900px;display:block" />
-        <h4><p><strong>2. I Received a Suspicious E-mail</strong></p></h4>
-        <p>
+    <!--==================================Right column========================-->
+    <div class="mt-3" id="navigation">        
+
+        <img class="mt-3 ml-3" src="../img/ePayBankDigi.png" style="margin-right:60px; width:900px;display:block">
+
+        
+
+        <h4><p class ="ml-3"><strong>2. I Received a Suspicious E-mail</strong></p></h4>
+        <p class ="ml-3">
                If you think you've received a fraudulent e-mail, but you haven't acted on it: Please forward	
                                                     it to <a href="mailto:abuse@chase.com">risk@check4digipay.com</a> so we can investigate it for you.
                                                     <br /><br />
@@ -186,7 +190,7 @@ img {
                                                     <a href="mailto:abuse@chase.com">risk@check4digipay.com</a>
             </p>
         <h3>I Think I'm a Victim of Fraud</h3>
-        <p>
+        <p class ="ml-3">
                                                     If you're worried that you might have inadvertently compromised your Check2Pay account:	
                                                     It's important you speak with us immediately. The sooner we know what's happened, the	
                                                     sooner we can begin helping you. Please call us now!<br />
@@ -200,7 +204,7 @@ img {
             <li><b>5. </b>PLease Call Us</li>
         </ul>
         <h3>Don't be fooled by an imposter</h3> <hr/>
-            <P>Security Center Tip: Phishing (pronounced "fishing") is a type of criminal activity that uses fraudulent techniques to obtain sensitive personal information 
+            <P class ="ml-3">Security Center Tip: Phishing (pronounced "fishing") is a type of criminal activity that uses fraudulent techniques to obtain sensitive personal information 
                 (such as passwords, account numbers, PINs, Social Security numbers and other account information). By pretending to be a trustworthy person or business 
                 in a seemingly official electronic communication like an e-mail, criminals use sophisticated lures to "fish" for users' passwords and personal or account 
                 information.</P> 
@@ -213,20 +217,33 @@ img {
             <li><b>3. </b>  Informs you that you have won a contest</li>
              
         </ul>
-        
-        <div class ="card">
-     <img class"card -img-top" src="../img/StopFraud.png" style="margin-right:10em;  width:120px;display:block " >
-     <div class="card-body"></div>
-     <h5 class="card-title">Always Check your account alteration:</h5></h5>
-      <p class="card-text">Will not share your email and password </p>
+      </dive> 
+      <!--===========================================media==================================-->
+     <div class ="media mt-5">
+     <img class"mt-5   width="400" height="480" src="../img/StopFraud.png   " >
+     <div class="media-body"> 
+        <ul class="ml-3"
+         <li><h4>Tips</h4></li>
+         <li></h5>Know who you’re dealing with.</h5></li>
+         <li></h5>Pay the safest way.</h5></li>
+         <li></h5>Guard your personal information.</h5></li>
+         <li></h5>Be cautious about unsolicited emails.</h5></li>
+          <li></h5>Pay the safest way.</h5></li>
+         <li></h5>Fully understand the offer.</h5></li>
+         <li></h5>Get off credit marketing lists.</h5></li>
+         <li></h5>Check your credit reports regularly.</h5></li>
+
+
+     </ul>
      </div>
      </div>
+      </div>
 
     <!--++++++++++++++++++++++++++extra zone start ++++++++++-->   
     <div id="extra">
         <p><strong></strong></p>
         <h3>3. Don't adopt a pet password</h3> <hr/>
-        <p>It's absolutely critical that you use a highly secure password for all of your financial accounts. Never use your pet's name, 
+        <p class="ml-3">It's absolutely critical that you use a highly secure password for all of your financial accounts. Never use your pet's name, 
             your child's name or anything else that a fraudster could easily find out. The most secure passwords are a combination of letters and numbers.</p>
         <ul>
             <li>Make your password long !</li>
