--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
  <!--    <link rel="stylesheet" href="/css/compliance.css"> -->
-     <link rel="stylesheet" href="/css/styles.css">  
+    <!-- <link rel="stylesheet" href="/css/styles.css">  -->
   <!--  <script src="../public/js/form.js"></script>
     <link rel="stylesheet" href="/css/form.css" > -->
 
@@ -52,7 +52,7 @@
     </div> 
 </nav>
            
-    <!--+++++++++++++++++++++++++++++++++++++++++++++++++++ Navabar End++++++++++++++++++-->
+<!--+++++++++++++++++++++++++++++++++++++++++++++++++++ Navabar End +++++++++++++++++++++++++-->
              
           
 
@@ -60,9 +60,10 @@
 body {
   background: lightblue;
 }
-
+.column-12"{width:100%
+}>
 .content {
-  max-width: 1500px;
+  max-width: 2000;
   margin: auto;
   background: white;
   padding: 10px;
@@ -108,9 +109,10 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
                 </ul>
             </ul>
                 </p>
-
+</div>
  <!-- ================================NESTING MEDIA OBJECTS info media==========================-->
-        <div class="media mt-3">
+       
+        <div class="media mt-5 mr-3">
             <a class =  href="#"></a>
             <img src="../img/entrepreneur.png" class="img-thumbnail mr-3"  width="250" height="180">
             <div class="media-body">
