--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -52,7 +52,7 @@
     </div> 
 </nav>
            
-<!--+++++++++++++++++++++++++++++++++++++++++++++++++++ Navabar End +++++++++++++++++++++++++-->
+<!--+++++++++++++++++++++++++++++++++++++++++++++++++++ Navabar End+++++++++++++++++++++++++-->
              
           
 
@@ -60,8 +60,7 @@
 body {
   background: lightblue;
 }
-.column-12"{width:100%
-}>
+
 .content {
   max-width: 2000;
   margin: auto;
@@ -111,7 +110,8 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
                 </p>
 </div>
  <!-- ================================NESTING MEDIA OBJECTS info media==========================-->
-       
+     
+<div class="content"> 
         <div class="media mt-5 mr-3">
             <a class =  href="#"></a>
             <img src="../img/entrepreneur.png" class="img-thumbnail mr-3"  width="250" height="180">
