--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -112,18 +112,18 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
  <!-- ================================NESTING MEDIA OBJECTS info media==========================-->
      
 
-        <div class="media mt-5 mr-3">
-            <a class =  href="#"></a>
-            <img src="../img/entrepreneur.png" class="img-thumbnail mr-3"  width="250" height="180">
+        <div class="media mt-5 mr-3 ">
+            <a class = "pr-3" href="#">
+            <img src="../img/entrepreneur.png" class="img-responsive"  width="250" height="180">
             <div class="media-body">
-                <h5>Merchants Marketing</h5>
+                <h5 class="text-white">Merchants Marketing</h5>
                 With the trend towards more direct, customer-centric marketing – and to ensure a positive customer experience 
                 that adds to the bottom line – more than ever marketers need sound customer communications management (CCM) 
                 strategies and solutions in place.
 
                 <div class="media mt-5">
                     <a class="pr-3" href="#">
-                        <img src="../img/document-chart.png" class="img-thumbnail" width="250" height="180">
+                        <img src="../img/document-chart.png" class="img-responsive" width="250" height="180">
                     </a>
                     <div class ="media-body">
                         <h5>Customer communications</h5>
