--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -182,9 +182,9 @@ guaranteed to increase Sales and Revenues </p></h2>
       <div class="card bg-success text-white p-3">
       <p class="card-text">Our Data Processing options can help you: 
       <ul class = "list-style:circle; padding-left:1em ">
-          <li>- Reduce check processing costs.</li>
-          <li>- Reduce the risk of fraud, returned checks, and non-sufficient funds notifications.</li>
-          <li>- Our Proprietary Payment Gateway also increases back-office efficiency. <a class="more_btn" href="../partners">Get Start</a>.</li>
+          <li>Reduce check processing costs.</li>
+          <li>Reduce the risk of fraud, returned checks, and non-sufficient funds notifications.</li>
+          <li>Our Proprietary Payment Gateway also increases back-office efficiency. <a class="more_btn" href="../partners">Get Start</a>.</li>
       </p> </ul>
       <hr>
        <ul style="list-style:square; padding-left:2rem;">
