--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -80,10 +80,10 @@
 
  
   <div style="background: transparent !important" class="jumbotron text-center"> 
-   <H3> <p class ="text-white">1-800-888-8888 </p></H3
+      <H3> <p class ="text-white">1-800-888-8888 </p></H3
         
 
-  <P> <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a></p> 
+       <P> <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a></p> 
 </div> 
 
 
@@ -97,40 +97,43 @@
          
     <!--####################### Card Deck ##############################-->       
             <div class="card-deck"> 
-              <!--=======================Solutions card===============-->
-              <div class="card" > 
+    <!--=======================   Solutions card  =================-->
+    <div class="card" > 
              <img class ="card-img-top" src="../img/technologyservices.jpg" alt ="Card image Cap">
-              <div class="card-body"  "tex-left">
-              <h5 class="card-title"><b>EZ Data Solutions</b></h5>
-              <div class="card bg-primary text-white"></div>
+      <div class="card-body"  "tex-left">
+              <h5 class="card-title text-center"><b>EZ Data Solutions</b></h5>
+        <div class="card bg-primary text-white p-3">
              <p class="card-text"> ChecksDigit Members Account Program and Data Processing Solutions are easy to use and 
-          with the most advanced technology, are enough to handle the needs of your business. <a class="more_btn" href="../clients">Get Start</a>
+          with the most advanced technology, are enough to handle the needs of your business. <a class="more_btn text-warning" href="../clients">Get Start</a>
      </p> <hr>
              </div>
              </div>  
+             </div> 
          
     
-<!--##############################Partners card ############################-->
+<!--############################## 3 ways make $ card ############################-->
  <div class="card">
     <img class="card-img-top" src="../img/meeting.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title"><b>3 Ways to Make Money</b></h5>
-      <div class="card bg-primary text-white"></div>
+      <h5 class="card-title text-center"><b>3 Ways to Make Money</b></h5>
+      <div class="card bg-success text-white p-3">
       <p class="card-text">There are three ways in making money with us; One is to use our Solutions as members do. 
-      Two is to become a Partner.Three is as an Aggregator utilizing our secure payment portal. <a class="more_btn" href="../partners">Get Start</a>.
+      Two is to become a Partner.Three is as an Aggregator utilizing our secure payment portal. <a class="more_btn text-warning" href="../partners">Get Start</a>.
       </p> <hr>
+     </div>
      </div>
      </div>
   <!--############################ Compliance card ##################################-->
 <div class="card">
     <img class="card-img-top" src="../img/CustomerService.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title"><b>Compliance</h5></b>
-      <div class="card bg-primary text-white"></div>
-      <p class="card-text">Our Compliance System is divided into three action levels: Prevent, Detect, and Respond. <a class="more_btn" href="../securitycenter">Learn More</a> </p>
+  <div class="card-body">
+      <h5 class="card-title text-center"><b>Compliance</h5></b>
+      <div class="card bg-info text-white p-3">
+      <p class="card-text">Our Compliance System is divided into three action levels: Prevent, Detect, and Respond. <a class="more_btn text-warning" href="../securitycenter">Learn More</a> </p>
       <hr>
 </div>
 </div>
+  </div>
   </div>
 </section> 
               <br>
@@ -196,7 +199,7 @@ guaranteed to increase Sales and Revenues </p></h2>
                 </ul>
      </div>
      </div></div>
-  <!--############################ Compliance card ##################################-->
+  <!--############################ Electronic Check Card ##################################-->
 <div class="card">
 <!-- <div class="card-header"> Electronic Checks </div> -->
     <img class="card-img-top" src="../img/sunsetbirdsboat.png" alt="Card image cap">
