--- a/templates/views/partners.hbs
+++ b/templates/views/partners.hbs
@@ -89,7 +89,7 @@
         
  
 
-             
+<!--====================================== Card Deck =============================================================-->             
 <div class="card-deck">
     <div class="card">
            <img class="card-img-top img-fluid" src="../img/onlinetrain.png" alt="Card image cap">
@@ -188,7 +188,8 @@
       
       
 
-    <!--...................................................right side section...................................-->
+    <!--...................................................right side section column...................................-->
+
     <div class="col-4 bg-success">
       <div class="row" style="margin-top:1em;">
       <!--  <div class="col-sm-12">-->
