--- a/templates/views/securitycenter.hbs
+++ b/templates/views/securitycenter.hbs
@@ -102,6 +102,13 @@
         }
     </style>-->
 
+    <style>
+.responsive {
+  width: 100%;
+  height: auto;
+}
+</style>
+
 </head>
  
 <body>
@@ -114,9 +121,9 @@
         <a href="/" target="_blank">Go Back</a>
            
     </div>
-
+<!--=========================class="responsive" width="600" height="400"===================-->
     <div class="mt-3" id="wrapper">
-        <img class="ml-3 mt-3" src="../img/security21.png" style="  width:750px;display:block" />
+        <img class="responsive" width="600" height="400" "ml-3 mt-3" src="../img/security21.png" >
         <div id="content">
         
             <H3><strong>1. Online Security </strong></H3> <hr/>
@@ -142,7 +149,7 @@
                   <P class="ml-3">If your browser does not meet the requirements necessary to support Check2Pay, we'll tell you how you can update your browser 
                       when you log on to Check4DigiPay Online.</P>  
 
-                      <img class = "ml-3" src="../img/computer-pen.png" style="margin-right:50px;  width:450px;display:block" > 
+                      <img class="responsive ml-3" width="600" height="400" "ml-3" src="../img/computer-pen.png"  > 
           <div>
               <p class="ml-3" >
                     Windows Operating System
@@ -175,7 +182,7 @@
     <!--==================================Right column========================-->
     <div class="mt-3" id="navigation">        
 
-        <img class="mt-3 ml-3" src="../img/ePayBankDigi.png" style="margin-right:60px; width:450px;display:block">
+        <img class="responsive" width="600" height="400" "ml-3 mt-3" src="../img/ePayBankDigi.png" >
 
         
 
@@ -215,10 +222,10 @@
             <li><b>3. </b>  Informs you that you have won a contest</li>
              
         </ul>
-      </dive> 
-      <!--===========================================media==================================-->
-     <div class ="media mt-5">
-     <img class"mt-5   width="450" height="480" src="../img/StopFraud.png   " >
+  
+      <!--===========================================media class="responsive" width="600" height="400"==================================-->
+  
+     <img class="responsive" width="100" height="50" "mr-3"  src="../img/StopFraud.png   " >
      <div class="media-body"> 
         <ul class="ml-3"
          <li><h4>Tips</h4></li>
@@ -231,11 +238,10 @@
          <li></h5>Get off credit marketing lists.</h5></li>
          <li></h5>Check your credit reports regularly.</h5></li>
 
-
      </ul>
-     </div>
-     </div>
-      </div>
+</div>
+</div>
+</div>
 
     <!--++++++++++++++++++++++++++extra zone start ++++++++++-->   
     <div id="extra">
