--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
     
-    <link rel="stylesheet" href="/css/styles.css"> 
+  <!-- <link rel="stylesheet" href="/css/styles.css"> -->
     <script src="../public/js/form.js"></script>
     <link rel="stylesheet" href="/css/form.css">
 
@@ -79,6 +79,7 @@
       <div class="row m-5"> 
       <div class="col-xs-6">          
         <div class="card-columns bg-info mt-5 text-white p-3 "> 
+         
           <div class="card  bg-success p-3"> 
           <img class="card-image-top img-fluid" src="../img/F22.png"  alt="">
        <div class="card-body-1"> 
@@ -126,7 +127,7 @@
                                 
                             
 
-                        <!-- <div class="col-sm-12" style="padding-top:1em; padding-bottom:1em;"> -->
+  <!--============== <div class="col-sm-12" style="padding-top:1em; padding-bottom:1em;"> -->
                                 
                             
             <div>
@@ -137,14 +138,17 @@
                      
            <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a>
             </div>
-        </div>
+        </div> 
+        
+        
         <br>
         <br>
-     <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ form ++++++++++++++++++++++++++++++++++++++-->                    
+     <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ form style="border:1px solid blue"++++++++++++++++++++++++++++++++++++++-->                    
       <form_container>
+           
          <div class="row">
-
-            <div class="col-md-auto col-md-offset-3" id="form_container" style="padding-top:1em; padding-bottom:1em;>
+           
+             <div class="col-xs-6 col-md-offset-6 ml-1em" id="form_container" style="padding-top:1em; padding-bottom:1em; border:1px solid blue">
              E-mail us ! We will get back to you at the earliest!
 
         <form role="form" method="post" id="reused_form"> <hr/>
@@ -177,10 +181,12 @@
                 </div>
             </div>
 
-        </form>
+       
+
         <div id="success_message" style="width:100%; height:100%; display:none; ">
             <h3>Posted your message successfully!</h3>
         </div>
+       
         <div id="error_message"
                 style="width:100%; height:100%; display:none; ">
                     <h3>Error</h3>
