--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -92,8 +92,8 @@
     <div class="container-fluid", style="margin-top:auto">
     
               <div class="row">
-                <div class="col-sm-8">
-   <!-- <div class="col-xs-10" style="text-align:left">-->
+              
+     <div class="col-md-8" style="text-align:left"> 
          
     <!--####################### Card Deck ##############################-->       
             <div class="card-deck"> 
@@ -141,7 +141,7 @@
               
 
 <!---================================================= Section2  ===================================-->
-<section class="place 3 cards creative_feature_area" style="margin-top:10em">
+<section class="place 3 cards creative_feature_area" style="margin-top:5em">
 
     <div class="benefits-container-fluid", style="margin-top:auto"> 
     
