--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -75,25 +75,27 @@ body {
 <h1><p class="text-center">Features and Benefits</p></h1> 
 
 <div class="container">
-
-<div class="content"> <br>
+<div class ="col-sm-10 " style="border:1px solid #333">
+<div class ="row"  
+  <div class="content"> <br>
     <img alt="" src="../img/Screenshot.png" class="card-img-top" />
   
   <!--are wider than 800 pixels.</h1>
   <h1>Resize the browser window to see the effect.</h1>
   <p>This page is always centered on screens that are wider than 500px. On screens that are less than 
   500px wide, it will span the whole of the page.</p>-->
-  <p class="text-justify", "text-sm-center" > The <b>combination of an authorization platform (frontend) and settlement platform (backend)</b> is essential to complete all aspects electronic transaction or physical check processing.
+  <p class="text-justify p-3", "text-sm-center" > The <b>combination of an authorization platform (frontend) and settlement platform (backend)</b> is essential to complete all aspects electronic transaction or physical check processing.
 Authorization platform refers to verification and sending authorization request to customers. 
 Settlement platform refers to the settling of transaction batch(s) in order to distribute funds.
 Settlement   includes: funding to the merchant, debt clearing house, chargebacks and retrievals, merchant statements.
 Merchants need to make sure that check drafts are duly authorized and consumers are identified in a commercially reasonable manner.
     </P>
-          <p> 
+          <p class="p-3"> 
               <b>
-                  The general process for this service is:
-              </b>
-              <ul class="list-group mb-n5">
+                  <H4>The general process for this service is:</H4>
+              </b> 
+            
+              <ul class="list-group mb-n5 p-5">
                   <li class="list-group-item"><b>Step 1</b>:  Customers select products and add them to merchant's shopping cart.</li>
                   <li class="list-group-item"><b>Step 2</b>:  Customers proceed to the checkout page.</li> 
                   <li class="list-group-item"><b>Step 3</b>:  Customers register or login to their account.</li>
@@ -110,7 +112,8 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
                 </p>
 </div>
  <!-- ================================NESTING MEDIA OBJECTS info media==========================-->
-     
+     <div class ="col-sm-12 mt-5" style="border:1px solid #333">
+        <div class ="row" 
 
         <div class="media mt-5 mr-3 ">
             <a class = "pr-3" href="#">
