--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -70,15 +70,16 @@ body {
 </style>
 </header>
 
-<!--++++++++++++++++++++++++++++++++++++++++++++++++++++ container ++++++++++++++++++++++++++++++++++-->
+<!--++++++++++++++++++++++++++++++++++++++++++++++++++++Center container ++++++++++++++++++++++++++++++++++-->
 </head>
 <h1><p class="text-center">Features and Benefits</p></h1> 
 
-<div class="container">
-<div class ="col-sm-10 " style="border:1px solid #333">
-<div class ="row"  
+<div class="container center">
+    
+<div class ="col-md-8 p-5" >
+  <div class ="row"  
   <div class="content"> <br>
-    <img alt="" src="../img/Screenshot.png" class="card-img-top" />
+  <img alt="header" src="../img/Screenshot.png" class="img-responsive"  width="500" height="180" >  
   
   <!--are wider than 800 pixels.</h1>
   <h1>Resize the browser window to see the effect.</h1>
@@ -110,19 +111,19 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
                 </ul>
             </ul>
                 </p>
-</div>
- <!-- ================================NESTING MEDIA OBJECTS info media==========================-->
-     <div class ="col-sm-12 mt-5" style="border:1px solid #333">
-        <div class ="row" 
+</div> </div>
+ <!-- ================================NESTING column & MEDIA OBJECTS info media==========================-->
+     <!--<div class ="col-sm-10 mt-5" style="border:1px solid #333">
+        <div class ="row" -->
 
-        <div class="media mt-5 mr-3 ">
+        <div class="media mt-5 mr-3 " >
             <a class = "pr-3" href="#">
             <img src="../img/entrepreneur.png" class="img-responsive"  width="250" height="180">
             <div class="media-body">
-                <h5 class="text-white">Merchants Marketing</h5>
-                With the trend towards more direct, customer-centric marketing – and to ensure a positive customer experience 
+             <p>  <h5 class="text-white">Merchants Marketing</h5> </p> 
+            <p> With the trend towards more direct, customer-centric marketing – and to ensure a positive customer experience 
                 that adds to the bottom line – more than ever marketers need sound customer communications management (CCM) 
-                strategies and solutions in place.
+                strategies and solutions in place. </p>
 
                 <div class="media mt-5">
                     <a class="pr-3" href="#">
