xm, sm adjust for iphone

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,8 +7,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
-     <link rel="stylesheet" href="/css/styles.css"> 
-   <!-- <script src="../public/js/form.js"></script> 
+   <!--  <link rel="stylesheet" href="/css/styles.css"> 
+    <script src="../public/js/form.js"></script> 
     <link rel="stylesheet" href="/css/form.css" > -->
   
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->    
@@ -92,8 +92,8 @@
     <div class="container-fluid", style="margin-top:auto">
     
               <div class="row">
-              
-     <div class="col-md-8" style="text-align:left"> 
+           <!-- <div class="col-xs-6"></div> -->
+     <div class="col-sm-10" style="text-align:left"> 
          
     <!--####################### Card Deck ##############################-->       
             <div class="card-deck"> 
