css files added logos fed repaired

--- a/public/css/compliance.css
+++ b/public/css/compliance.css
@@ -5,8 +5,11 @@ body {
 }
 
 .content {
-  max-width: 500px;
+  max-width: 800px;
   margin: auto;
-  background: white;
+  background: lightskyblue;
   padding: 10px;
 }
+
+
+
