--- a/templates/views/Spare.hbs
+++ b/templates/views/Spare.hbs
@@ -21,7 +21,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
       
-  <title>About</title>  
+  <title>Spare</title>  
 
 </head>
 
@@ -55,7 +55,7 @@
            
     
 
-
+<div style="margin-top:100px;"></div>
 <!--+++++++++++++++++++++++++++++++++++++++++++++++++++ menu bar++++++++++++++++++-->
 
     
@@ -72,15 +72,12 @@
                       
            </style>
 
-           <style>
-.responsive {
-  width: 100%;
-  height: auto;
-}
-</style>
+  
 
          
 </header>
+
+<!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
 <body>
 
 
@@ -96,11 +93,15 @@
         </ul>
       </div >
     
-  <div class="col"  style="border:1px solid #333">Equal Width</div>
-      <div class="col"  style="border:1px solid #333">Equal Width</div>
-      <div class="col"  style="border:1px solid #333">Equal Width</div>
-      <div class="col"  style="border:1px solid #333">Equal Width</div>
+  <div class="col"  style="border:1px solid skyblue">Equal Width</div>
+      <div class="col"  style="border:1px solid sienna">Equal Width</div>
 
+      <div class="col"  style="border:1px solid #333">Equal Width
+          <img class="ml-2 mt-3" src="../img/4F16.png" style="  width:100px;display:block" /> 
+      </div>
+      <div class="col"  style="border:1px solid #333">Equal Width
+          <img class="ml-2 mt-3" src="../img/DSC_1059.png" style="  width:100px;display:block" /> 
+      </div>
  </div>
 
    <div class="row">
@@ -116,8 +117,15 @@
       <div class="col-sm-3 bg-success" style="border:1px solid #333">Equal Width Stack
         <img class="responsive" width="600" height="400"  src="../img/security21.png" /> 
 
-      </div>
+      </div>       
     </div>
+      <div class="row">
+      <div class="col-sm-6 bg-secondary"  style="border:1px solid skyblue">Equal Width
+          <img class="ml-2 mt-3" src="../img/4F16.png" style="  width:400px;display:block" /> 
+      </div>
+      <div class="col-sm-6 bg-dark"  style="border:1px solid sienna">Equal Width
+        </div>
+        </div>
 
 
 
