--- a/templates/views/compliance.hbs
+++ b/templates/views/compliance.hbs
@@ -4,7 +4,7 @@
  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
- <!--    <link rel="stylesheet" href="/css/compliance.css"> -->
+     <link rel="stylesheet" href="/css/compliance.css"> 
      <link rel="stylesheet" href="/css/styles.css">  
   <!--  <script src="../public/js/form.js"></script>
     <link rel="stylesheet" href="/css/form.css" > -->
@@ -56,32 +56,23 @@
              
           
 
-<style>
-body {
-  background: lightblue;
-}
 
-.content {
-  max-width: 800px;
-  margin: auto;
-  background: white;
-  padding: 10px;
-}
-</style>
+
+
 </header>
 
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++ container ++++++++++++++++++++++++++++++++++-->
 </head>
 <h1><p class="text-center">Complianted PCI (Payment Card or Check Industry) Security Standards</p></h1> 
 
-<div class="content"> <br>
-    <img alt="" src="../img/complinacelogo.png" class="card-img-top" />
+<div class="content center"> <br>
+    <img alt="" src="../img/FedCompliance.png" class="card-img-top pl-5"  style="width:50%"/>
   
   <!--are wider than 800 pixels.</h1>
   <h1>Resize the browser window to see the effect.</h1>
   <p>This page is always centered on screens that are wider than 500px. On screens that are less than 
   500px wide, it will span the whole of the page.</p>-->
-  <p class="text-justify", "text-sm-center" > Data hosting and processing must be meet <b>PCI</b> (Payment Card or Check Industry) Security Standards.
+  <p class="text-justify p-3", "text-sm-center" > Data hosting and processing must be meet <b>PCI</b> (Payment Card or Check Industry) Security Standards.
 The PCI Data Security Standard <b>(PCI-DSS)</b> represents a common set of industry tools and measurements to help ensure the safe handling of sensitive information. 
 The PCI DSS was created by the major bank, the credit card, the processor, as a guideline to help businesses implement the necessary hardware, software and other procedures to guard sensitive checks, bank and personal information. There are many aspects to compliance including: management, policies, procedures, network architecture, software design and other critical protective measures.  All organizations who hanle payment are obligated to comply with the PCI DSS. The Compliance be aware is growing problems of fraud losses, mis-represent, loss of consumer confidence, brand & reputation damage, legislature interest.
 
@@ -93,7 +84,7 @@ Merchants who fail to become PCI compliant could be putting their businesses at 
 
 Substantial penalties (fines), fraud and chargebacks, as well as legal cost and customers is the increasing possibility that US businesses, no matter how small, will have foreign suppliers or clients, makes it imperative for them to understand the Office of Foreign Asset Control compliance. Businesses are responsible for following OFAC regulations which are designed to halt terrorist and other unlawful funds circulation. 
     </P>
-             <img alt="" src="../img/compliancelogo2.png" class="card-img-bottom"> .</p>
+             <img alt="" src="../img/FedTreasury.png" class="card-img-bottom float-right pr-5" style="width:50%" > .</p>
   
 </div>
 
