--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -54,9 +54,10 @@
 
            
           <style>
-              
-
+                               
                    body {
+
+                  
                        background-color: #79a6d2;
                                       
                        background-repeat: no-repeat;
@@ -64,6 +65,8 @@
                        
                       
            </style>
+           
+  
 </header>
              
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
@@ -71,9 +74,9 @@
         
   <div class = "container margin-left=10px" > 
 
-    <h3> {{helpText}} </h3> <!--Email Assistance -->
+    <h3 class ="mt-5"> {{helpText}} </h3> <!--Email Assistance -->
 
-     <img src="../img/gmail_largelogo.jpg" style="margin-left:20px; width:200px;display:block" />
+     <img class="mt-5" src="../img/gmail_largelogo.jpg" style="margin-left:20px; width:200px;display:block" />
     
      <h4>Need some help ? Have a question or comment ? E-mail us !</h4>
 <!--+++++++++++++++++++++++++++++++++++++form+++++++++++++++++++++++++++++++++++++-->
