--- a/templates/views/Login.hbs
+++ b/templates/views/Login.hbs
@@ -15,7 +15,7 @@
   
  <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->    
   <!---<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
-  
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
@@ -64,8 +64,14 @@
                        background-repeat: no-repeat;
                        background-size: 100% 100%;
                        
+                       .responsive {
+  width: 100%;
+  height: auto;
+}
                       
            </style> 
+
+           
            
 </header>
                              
