--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -4,7 +4,7 @@
  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
- <!--    <link rel="stylesheet" href="/css/compliance.css"> -->
+ <!--    <link rel="stylesheet" href="/css/benefits.css"> -->
     <!-- <link rel="stylesheet" href="/css/styles.css">  -->
   <!--  <script src="../public/js/form.js"></script>
     <link rel="stylesheet" href="/css/form.css" > -->
@@ -20,7 +20,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
       
-  <title>Fed Compliance </title>  
+  <title> Benefits</title>  
 
 </head>
 
@@ -56,18 +56,7 @@
              
           
 
-<style>
-body {
-  background: lightblue;
-}
 
-.content {
-  max-width: 2000;
-  margin: auto;
-  background: white;
-  padding: 10px;
-}
-</style>
 </header>
 
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++Center container ++++++++++++++++++++++++++++++++++-->
@@ -75,9 +64,9 @@ body {
 <h1><p class="text-center">Features and Benefits</p></h1> 
 
 <div class="container center">
-    
+    <div class ="row justify-content-center"  
 <div class ="col-md-8 p-5" >
-  <div class ="row"  
+  
   <div class="content"> <br>
   <img alt="header" src="../img/Screenshot.png" class="img-responsive"  width="500" height="180" >  
   
@@ -111,10 +100,15 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
                 </ul>
             </ul>
                 </p>
-</div> </div>
+  </div> 
+</div>
+<!--+++++++++++++++++++++++++++++++++++++++++++++++ Add two colmuns++++++++++++++++++++++++++++++++++++-->
+
+
  <!-- ================================NESTING column & MEDIA OBJECTS info media==========================-->
-     <!--<div class ="col-sm-10 mt-5" style="border:1px solid #333">
-        <div class ="row" -->
+
+    <div class ="row justify-content-center no-gutters"  
+<div class ="col-md-8 p-5" >
 
         <div class="media mt-5 mr-3 " >
             <a class = "pr-3" href="#">
@@ -140,6 +134,8 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
 
         <br>
         <br>
+        <hr>
+        </div>
              <img alt="" src="../img/chartbar.png" class="card-img-bottom"> .</p>
   
 </div>
