--- a/templates/views/securitycenter.hbs
+++ b/templates/views/securitycenter.hbs
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
-    <title>HTML FlexBox -  Two percentage columns and one larger, left content</title>
+    <title>Security Info Center</title>
       
      <link rel="stylesheet" href="/css/security.css" >       
     <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">    
