bg imga in about

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -63,10 +63,10 @@
               
 
                    body {
-                       background-color: #79a6d2;
-                                           
+                       
+                       background-image: url("../img/DSC_9461.jpg");                     
                        background-repeat: no-repeat;
-                       background-size: 100% auto;
+                       background-size: 150% auto;
                        
                       
            </style>
