--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -64,7 +64,7 @@
 
                    body {
                        
-                       background-image: url("../img/DSC_9461.jpg");                     
+                       background-image: url("../img/DSC_9461.png");                     
                        background-repeat: no-repeat;
                        background-size: 150% auto;
                        
