--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -57,7 +57,9 @@
              <li class="nav-item active">
                 <a class="nav-link" href="/securitycenter">Cyber_Security</a>
              </li>
-             
+             <li class="nav-item active">
+                <a class="nav-link" href="/Spare">Spare Page</a>
+             </li>
             </li>
         </ul>
     </div>
