low case all hbs

--- a/templates/views/Login.hbs
+++ b/templates/views/Login.hbs
@@ -20,7 +20,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
       
-  <title>eSupport</title>  
+  <title>login</title>  
 
 </head>
 
@@ -64,13 +64,8 @@
                        background-repeat: no-repeat;
                        background-size: 100% 100%;
                        
-                       .responsive {
-  width: 100%;
-  height: auto;
-}
                       
            </style> 
-
            
            
 </header>
