--- a/templates/views/Spare.hbs
+++ b/templates/views/Spare.hbs
@@ -22,7 +22,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
       
-  <title>Spare</title>  
+  <title>Spare Page</title>  
 
 </head>
 
