--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -27,7 +27,7 @@
 
 <nav class="navbar fixed-top navbar-expand-xl bg-dark navbar-dark justify-content-end ">
     <a class="navbar-brand" href="/">Home</a>
-    <a href="/MerchantRegisterForm"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
+    <a href="/merchantregisterform"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="/securitycenter">Cyber_Security</a>
              </li>
              <li class="nav-item active">
-                <a class="nav-link" href="/Spare">Spare Page</a>
+                <a class="nav-link" href="/spare">Spare Page</a>
              </li>
             </li>
         </ul>
