low case in all pages header links

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -14,7 +14,7 @@
     <a href="/compliance">Compliance</a>
     <a href="/securitycenter">Security Center</a>
     <a href="/login">Login</a>
-    <a href="/MerchantRegisterForm">Sign Up</a>
+    <a href="/merchantregisterform">Sign Up</a>
     
        
   </h2> 
