--- a/templates/views/MerchantRegisterForm.hbs
+++ b/templates/views/MerchantRegisterForm.hbs
@@ -27,14 +27,14 @@
 
 <nav class="navbar fixed-top navbar-expand-xl bg-primary navbar-dark justify-content-end ">
     <a class="navbar-brand" href="/">Home</a>
-    <a href="/MerchantRegisterForm"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
+    <a href="/merchantregisterform"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
         <ul class="navbar-nav text-right">
             <li class="nav-item active">
-                <a class="nav-link" href="/Login" class = "text-success">Login</a>
+                <a class="nav-link" href="/login" class = "text-success">Login</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/help">eSupport</a>
