--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="/securitycenter">Cyber_Security</a>
              </li>
              <li class="nav-item active">
-                <a class="nav-link" href="/spare">Spare Page</a>
+                <a class="nav-link" href="/Spare">Spare Page</a>
              </li>
             </li>
         </ul>
