--- a/templates/views/clients.hbs
+++ b/templates/views/clients.hbs
@@ -34,7 +34,7 @@
     <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
         <ul class="navbar-nav text-right">
             <li class="nav-item active">
-                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" href="/Login">Login</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/help">eSupport</a>
