--- a/templates/views/compliance.hbs
+++ b/templates/views/compliance.hbs
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
         <ul class="navbar-nav text-right">
             <li class="nav-item active">
-                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" href="/Login">Login</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/partners">Partner</a>
