--- a/templates/views/Login.hbs
+++ b/templates/views/Login.hbs
@@ -30,7 +30,7 @@
 
 <nav class="navbar fixed-top navbar-expand-xl bg-dark navbar-dark justify-content-end ">
     <a class="navbar-brand" href="/">Home</a>
-    <a href="/merchantregisterform"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
+    <a href="/MerchantRegisterForm"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
     </button>
