--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,80 +1,4 @@
-<!DOCTYPE html>
-  <html lang="en">
- <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
-      
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-    crossorigin="anonymous">
-   <!--  <link rel="stylesheet" href="/css/styles.css"> 
-    <script src="../public/js/form.js"></script> 
-    <link rel="stylesheet" href="/css/form.css" > -->
-  
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->    
-  <!---<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
-      
-                                <title>Home</title>  
-
-</head>
-
-<body>
- <header>
-
-<nav class="navbar fixed-top navbar-expand-xl bg-dark navbar-dark justify-content-end ">
-    <a class="navbar-brand" href="/">Home</a>
-    <a href="/merchantregisterform"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
-        <ul class="navbar-nav text-right">
-            <li class="nav-item active">
-                <a class="nav-link" href="/Login" class = "text-success">Login</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/help">eSupport</a>
-            </li>    
-            <li class="nav-item active">
-                <a class="nav-link" href="/benefits">Benefits</a>            
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/partners">Partners</a>            
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/clients">Clients</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/about">About</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/compliance">Compliance</a>
-             </li>
-             <li class="nav-item active">
-                <a class="nav-link" href="/securitycenter">Cyber_Security</a>
-             </li>
-             <li class="nav-item active">
-                <a class="nav-link" href="/Spare">Spare Page</a>
-             </li>
-            </li>
-        </ul>
-    </div>
-</nav>
-      
-
- <style>
-            body  {
-                   background-image: url("../img/vpn-net.png");                       
-                   
-                   background-repeat: no-repeat;
-                   background-size:  100% auto;
-                  }
-         </style> 
-</header>
+{{>header}}
 
 
 <!--+++++++++++++++++++++++++++++++++++++-header end ++++++++++++++++++++++++++++++++++++++++++++++--->
