--- a/public/css/form.css
+++ b/public/css/form.css
@@ -7,7 +7,22 @@
 body
 {
 	background-color: #F4EAD5;
-	background-image: url("images/window-484596_1280.jpg");
+	background-image: url("../img/DSC_9461.png");
 	background-size: cover;
 }
 
+footer {
+
+	columns: #888888;
+	Border-top:1px solid #b4afaf;
+	margin-top:16px;
+	padding: 60px 0;
+	 
+	
+
+}
+
+.wpforms-container.wpf-center {
+	margin: 0 auto !important;
+	max-width: 500px;
+}
