--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,14 +1,24 @@
 body{
-    color: #333333;
+    
+ /*   color: #333333;
     font-family:arial;
     max-width: auto;
     margin: 0 auto;
-    padding: 0 16px;
+    padding: 0 16px; */
+    
+   
+           background-image: url("../img/vpn-net.png");                       
+           
+           background-repeat: no-repeat;
+           background-size:  100% auto;
+        
+
+
 
     display: flex;
     flex-direction:column;
     min-height: 100vh
-
+   
      
 }
 
@@ -22,11 +32,13 @@ body{
         columns: #888888;
         Border-top:1px solid #b4afaf;
         margin-top:16px;
-        padding: 16px 0;
+        padding: 16p x 0;
+        margin-left: 30;
+        text-align: center;
 
     }
 
-    header {
+ /*   header {
        
         margin-top: 20px;
         margin-bottom: 28px;
@@ -78,7 +90,7 @@ body{
             color: white;
             padding: 8px
     }
-   
+   */
     
 
     
