--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
-     <link rel="stylesheet" href="/css/styles.css">  
+     <link rel="stylesheet" href="/css/help.css">  
     <script src="../public/js/form.js"></script>
     <link rel="stylesheet" href="/css/form.css" > 
   
@@ -53,18 +53,7 @@
 <!--++++++++++++++++++++++++++++++++++Navabar end+++++++++++++++++++++++++++++-->
 
            
-          <style>
-                               
-                   body {
-
-                  
-                       background-color: #79a6d2;
-                                      
-                       background-repeat: no-repeat;
-                       background-size: 100% auto;
-                       
-                      
-           </style>
+   
            
   
 </header>
@@ -72,14 +61,16 @@
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
  
         
-  <div class = "container margin-left=10px" > 
+  <div class = "container " > 
 
     <h3 class ="mt-5"> {{helpText}} </h3> <!--Email Assistance -->
 
-     <img class="mt-5" src="../img/gmail_largelogo.jpg" style="margin-left:20px; width:200px;display:block" />
+     <img class="mt-5 ml-3" src="../img/gmail_largelogo.jpg" style="margin-left:1px; width:200px;display:block" />
     
-     <h4>Need some help ? Have a question or comment ? E-mail us !</h4>
+   <!--  <h4>Need some help ? Have a question or comment ? E-mail us !</h4> -->
 <!--+++++++++++++++++++++++++++++++++++++form+++++++++++++++++++++++++++++++++++++-->
+<div class="col ml-5>
+
 <form> 
      <div class="row">
      <div class="col-md-6 col-md-offset-3" id="form_container"> <!--light block area -->
