--- a/templates/views/securitycenter.hbs
+++ b/templates/views/securitycenter.hbs
@@ -103,12 +103,12 @@
     </style>-->
 <!--===========================================================================================-->
 
-        <style>
+      <!--  <style>
            .responsive {
            width: 100%;
            height: auto;
           }
-      </style>
+      </style> -->
 
 </head>
  
@@ -123,8 +123,9 @@
            
     </div>
 <!--=========================class="responsive" width="600" height="400"===================-->
+    <div class="col">
     <div class="mt-3" id="wrapper">
-        <img class="responsive" width="600" height="400" "ml-3 mt-3" src="../img/security21.png" >
+        <img class="responsive" src="../img/security21.png" >
         <div id="content">
         
             <H3><strong>1. Online Security </strong></H3> <hr/>
@@ -150,17 +151,18 @@
                   <P class="ml-3">If your browser does not meet the requirements necessary to support Check2Pay, we'll tell you how you can update your browser 
                       when you log on to Check4DigiPay Online.</P>  
 
-                      <img class="responsive ml-3" width="600" height="400" "ml-3" src="../img/computer-pen.png"  > 
+                      <img class="responsive ml-3"  src="../img/computer-pen.png"  > 
           <div>
-              <p class="ml-3" >
-                    Windows Operating System
-              </p>
+              <p class="ml-3 text-justify badge-primary" >
+                   Windows Operating System
+             </p>
           <ul>
             <li>Windows XP, Windows Vista and higher</li>
             <li>Internet Explorer 7 and higher</li>
             <li>Firefox 3.0 and higher, Chrome 12 and higher</li>
          </ul>
-                 <p class="ml-3">
+                 <p class="ml-3 text-justify badge-primary ">
+                     <img class="responsive mr-3"  src="../img/photo-hero.png"  > 
                     Macintosh Operating System
                  </p>
           <ul>
@@ -178,9 +180,44 @@
          </ul> 
           </div>
 
-        </div>
-    </div>
+        </div> 
+    
+<!--=============================================flex box 3 ===============================================-->
+<style>
+.flex-container {
+  display: flex;
+  background-color: DodgerBlue;
+}
+
+.flex-container > div {
+  background-color: #f1f1f1;
+  margin: 10px;
+  padding: 20px;
+  font-size: 30px;
+}
+</style>
+
+
+<div class="flex-container d-flex flex-nowrap">
+  <div>Desktop
+      <img class="responsive" width="100" height="120" "ml-3 mt-3" src="../img/ipad.png" >
+  </div>
+  <div>Median size
+      <img class="responsive" width="100" height="120" "ml-3 mt-3" src="../img/ipad.png" >
+  </div>
+  <div>
+       Small size device     
+  </div>  
+</div> 
+
+<p>A Flexible <em>display</em> devices <em></em>.</p>
+
+<p>From Win based PC to smart phone: iPhone, Adroid Phone, iPad, Android Tablets </p>
+
+</div>
+
     <!--==================================Right column========================-->
+    
     <div class="mt-3" id="navigation">        
 
         <img class="responsive" width="600" height="400" "ml-3 mt-3" src="../img/ePayBankDigi.png" >
